Blender crash. Linked speaker issue. #47643

Closed
opened 2016-03-01 15:35:34 +01:00 by Alexander Romanov · 6 comments

Blender Version
2.77 rc1 and the current master

Exact steps for others to reproduce the error
Follow these steps of see the video https://youtu.be/HaaJEwfDQoE

  1. Create a speaker.
  2. Open a sound.
  3. Save this file.
  4. Create another file and link the speaker object from the previous file.
  5. Select this object and press L, choose "Selected object and Data"
  6. Save the file.
  7. Reopen last file ==> Crash
**Blender Version** 2.77 rc1 and the current master **Exact steps for others to reproduce the error** Follow these steps of see the video https://youtu.be/HaaJEwfDQoE 1) Create a speaker. 2) Open a sound. 3) Save this file. 4) Create another file and link the speaker object from the previous file. 5) Select this object and press L, choose "Selected object and Data" 6) Save the file. 7) Reopen last file ==> Crash
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @AlexanderRomanov

Added subscriber: @AlexanderRomanov

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2016-03-01 17:59:23 +01:00

Confirmed, the sound datablock is not made 'direct linked' data here for some reason. On it.

Confirmed, the sound datablock is not made 'direct linked' data here for some reason. On it.

This issue was referenced by 42b2c47386

This issue was referenced by 42b2c47386ef3c9f4db5654a9920bf2fbbe4e632

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47643
No description provided.