Fix T47643: Blender crash. Linked speaker issue.

Speaker's localization func would not make direct-linked its used sound datablock...